@@ -20,6 +20,8 @@
 - fixed error handling in the `QueryBuilder`
 - added `COMPONENTATOR(name, components)` method for downloading of UI components
 - fixed returning object instance in the `ROUTE()` method
+- added `publish:Boolean/String` property into the `schema.action()`
+- added `$.publish(value)` property into the `SchemaOptions`
 
 ========================
 0.0.71
